--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -5,4 +5,6 @@
   gap: 12px;
   box-shadow: 11px 10px 25px 4px rgba(0, 0, 0, 0.24);
   justify-content: center;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
